Add clarification note in results section

--- a/MBA_Apriori.ipynb
+++ b/MBA_Apriori.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMc9KzNfgNz/vFyrOfYT1xE",
+      "authorship_tag": "ABX9TyPGaZi6R3eNrQ3VSVchs9SG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "y2SxQh1-IxRq"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "l8kdS9ADzuJp"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "TC7cFthzz1WM"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
       "metadata": {
         "id": "kHup2Xsz1zCp"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -186,7 +186,7 @@
         "id": "bNOnIc7h27j9",
         "outputId": "0dcb342c-2e61-4978-b6cf-65f5902f1bdc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +211,7 @@
       "metadata": {
         "id": "cKw5DibG6Vrh"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,93 +226,6 @@
     {
       "cell_type": "code",
       "source": [
-        "type(job_skills)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 186
-        },
-        "id": "PS2yPbVHLsFw",
-        "outputId": "67c8b2f8-bc54-4e5c-fd66-c35dfd5536ef"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "pyspark.sql.dataframe.DataFrame"
-            ],
-            "text/html": [
-              "<div style=\"max-width:800px; border: 1px solid var(--colab-border-color);\"><style>\n",
-              "      pre.function-repr-contents {\n",
-              "        overflow-x: auto;\n",
-              "        padding: 8px 12px;\n",
-              "        max-height: 500px;\n",
-              "      }\n",
-              "\n",
-              "      pre.function-repr-contents.function-repr-contents-collapsed {\n",
-              "        cursor: pointer;\n",
-              "        max-height: 100px;\n",
-              "      }\n",
-              "    </style>\n",
-              "    <pre style=\"white-space: initial; background:\n",
-              "         var(--colab-secondary-surface-color); padding: 8px 12px;\n",
-              "         border-bottom: 1px solid var(--colab-border-color);\"><b>pyspark.sql.dataframe.DataFrame</b><br/>def __init__(jdf, sql_ctx)</pre><pre class=\"function-repr-contents function-repr-contents-collapsed\" style=\"\"><a class=\"filepath\" style=\"display:none\" href=\"#\">/content/spark-3.1.1-bin-hadoop3.2/python/pyspark/sql/dataframe.py</a>A distributed collection of data grouped into named columns.\n",
-              "\n",
-              "A :class:`DataFrame` is equivalent to a relational table in Spark SQL,\n",
-              "and can be created using various functions in :class:`SparkSession`::\n",
-              "\n",
-              "    people = spark.read.parquet(&quot;...&quot;)\n",
-              "\n",
-              "Once created, it can be manipulated using the various domain-specific-language\n",
-              "(DSL) functions defined in: :class:`DataFrame`, :class:`Column`.\n",
-              "\n",
-              "To select a column from the :class:`DataFrame`, use the apply method::\n",
-              "\n",
-              "    ageCol = people.age\n",
-              "\n",
-              "A more concrete example::\n",
-              "\n",
-              "    # To create DataFrame using SparkSession\n",
-              "    people = spark.read.parquet(&quot;...&quot;)\n",
-              "    department = spark.read.parquet(&quot;...&quot;)\n",
-              "\n",
-              "    people.filter(people.age &gt; 30).join(department, people.deptId == department.id) \\\n",
-              "      .groupBy(department.name, &quot;gender&quot;).agg({&quot;salary&quot;: &quot;avg&quot;, &quot;age&quot;: &quot;max&quot;})\n",
-              "\n",
-              ".. versionadded:: 1.3.0</pre>\n",
-              "      <script>\n",
-              "      if (google.colab.kernel.accessAllowed && google.colab.files && google.colab.files.view) {\n",
-              "        for (const element of document.querySelectorAll('.filepath')) {\n",
-              "          element.style.display = 'block'\n",
-              "          element.onclick = (event) => {\n",
-              "            event.preventDefault();\n",
-              "            event.stopPropagation();\n",
-              "            google.colab.files.view(element.textContent, 41);\n",
-              "          };\n",
-              "        }\n",
-              "      }\n",
-              "      for (const element of document.querySelectorAll('.function-repr-contents')) {\n",
-              "        element.onclick = (event) => {\n",
-              "          event.preventDefault();\n",
-              "          event.stopPropagation();\n",
-              "          element.classList.toggle('function-repr-contents-collapsed');\n",
-              "        };\n",
-              "      }\n",
-              "      </script>\n",
-              "      </div>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# The total number of rows\n",
         "job_skills.count()"
       ],
@@ -323,7 +236,7 @@
         "id": "AhLQVvIbZyLs",
         "outputId": "14758f03-7c7b-4bda-c769-ee77061e5878"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,7 +263,7 @@
         },
         "outputId": "edc8662d-e6e9-41a9-93fe-91fbfe2075b0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +290,7 @@
         },
         "outputId": "b3dc9445-63ae-4ebe-e89c-bf8ef9b1f416"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +318,7 @@
       "metadata": {
         "id": "62Rz1Vl06Voy"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +334,7 @@
         },
         "outputId": "a907f2af-12ce-4f35-bbc1-2d1a1383ed0c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,38 +351,12 @@
     {
       "cell_type": "code",
       "source": [
-        "sample.first()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "daThNLtiQZtI",
-        "outputId": "6b354980-48f6-4b39-ce33-6a2297e4477e"
-      },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Row(job_skills='Veterinary Receptionist, AAHAaccredited, Customer service, Communication skills, Organizational skills, Problemsolving skills, Time management skills, Ability to work independently, Ability to multitask, Ability to work in a fastpaced environment, Ability to learn new computer software systems, Ability to handle dogs cats and exotic animals, Typing 40+ wpm, Email systems, Basic MS Office products (Word Excel), High School Diploma or equivalent, 1+ years of customer service experience, 1+ years of experience working with computers, Veterinary experience, Ability to lift 25+ pounds, Ability to stand walk stoop kneel crouch and climb, Ability to work extended hours including weekends and holidays')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "myrdd = sample.rdd.map(lambda x: x[0])"
       ],
       "metadata": {
         "id": "CVGnBurzm89L"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -490,7 +377,7 @@
       "metadata": {
         "id": "Q-JERZTq_nUt"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -501,7 +388,7 @@
       "metadata": {
         "id": "pvi2OierYy34"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -580,7 +467,7 @@
       "metadata": {
         "id": "poQmHmoMUTWW"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -596,7 +483,7 @@
         "id": "sXaORemvKO9N",
         "outputId": "f980ffb2-08fa-4f0d-f2f3-50d60980ae8d"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,7 +518,7 @@
         "id": "jF70EOWYNFxs",
         "outputId": "4b18b784-c025-45ab-f059-f7781b610c9a"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -961,7 +848,7 @@
       "metadata": {
         "id": "1jqMldQrdvUi"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -974,7 +861,7 @@
       "metadata": {
         "id": "MPqRccbrdvSZ"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1008,7 +895,7 @@
         "id": "MJPcV_L8qBZU",
         "outputId": "6db24122-1419-46c3-b54f-1c408fd5cc10"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1021,6 +908,20 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font size=4> In the cell below, the `itemset` can have three values:  \n",
+        "* top_singletons\n",
+        "* top_pairs\n",
+        "* top_triples\n",
+        "\n",
+        "If you want to see the top singletons you need to set `itemset = 'top_singletons` and so on. </font>"
+      ],
+      "metadata": {
+        "id": "TldJ9m3mdrEk"
+      }
     },
     {
       "cell_type": "code",
@@ -1041,7 +942,7 @@
       "metadata": {
         "id": "eDY-0dN4huR1"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1065,7 +966,7 @@
         "id": "Z6glPdJ5fw2Z",
         "outputId": "4d788c35-b03a-4b96-c8b0-b2c9d6364b51"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
