Add clarification note in results section

--- a/MBA_Apriori.ipynb
+++ b/MBA_Apriori.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGaZi6R3eNrQ3VSVchs9SG",
+      "authorship_tag": "ABX9TyPQRkxIqLJdGmtQGaCtuEaF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -917,7 +917,7 @@
         "* top_pairs\n",
         "* top_triples\n",
         "\n",
-        "If you want to see the top singletons you need to set `itemset = 'top_singletons` and so on. </font>"
+        "If you want to see the top singletons you need to set `itemset = 'top_singletons'` and so on. </font>"
       ],
       "metadata": {
         "id": "TldJ9m3mdrEk"
